--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
 
                 <div class="rightCol">
-                    <p>A long-term cloud- and web- based software developer, I've been involved in many projects ranging from mainframe integration to complex distributed decision support systems. With experiences ranging from academia, bio-tech/pharmaceuticals to manufacturing and Six-Sigma, I've gained considerable experience working with disparate systems, the teams that own them, and the differing constraints faced by each. As an enterprise-level architect, I'm able to put this experience to use where it matters most.</p>
+                    <p>A long-term cloud- and web- based software developer, I've been involved in many projects ranging from mainframe integration to complex distributed decision support systems. </p>
                     <p>Most recently, I've been researching formal methods of distributed/concurrent system modeling and verification within the .NET technology space. While common in other non-Microsoft areas of the field, this is relatively uncommon in the day-to-day use of .NET and related tooling.</p>
                 </div>
             </div>
