Updated line-height and removed some more BS comments

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                 <div class="rightCol">
                     <p>A long-term cloud- and web- based software developer, I've been involved in many projects ranging from mainframe integration to complex distributed decision support systems. </p>
-                    <p>Most recently, I've been researching formal methods of distributed/concurrent system modeling and verification within the .NET technology space. While common in other non-Microsoft areas of the field, this is relatively uncommon in the day-to-day use of .NET and related tooling.</p>
+                    <p>Most recently, I've been researching formal methods of distributed/concurrent system modeling and verification within the .NET technology space. </p>
                 </div>
             </div>
         </div>
