Updated bg color, text shadow, and intro blurb

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
                 </div>
 
                 <div class="rightCol">
-                    <p>A long-term cloud- and web- based software developer, I've been involved in many projects ranging from mainframe integration to complex distributed decision support systems. </p>
-                    <p>Most recently, I've been researching formal methods of distributed/concurrent system modeling and verification within the .NET technology space. </p>
+                    <p>Ramblings and thoughts on cloud, distributed systems, and formal verification methods....may some programming, too!</p>
                 </div>
             </div>
         </div>
