Added about page, linkedin social badges, and top-nav

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8" />
-        <title>michael yeaney :: blog</title>
+        <title>michael yeaney :: about me</title>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="core.css" />
     </head>
@@ -21,9 +21,9 @@
         <div id="content">
             <div class="wrapper">
                 <div class="leftCol">
-                    <h2>Test Post</h2>
-                    <p>A simple test post to get up and running...(not-so) serious content on the way.</p>
-                    <p><a href="#" title="Test Post">More...</a></p>
+                    <h2>About Me</h2>
+                    <p>As a long-term cloud- and web- based software developer, I've been responsible for projects ranging from mainframe integration to complex, distributed decision-support systems. With experiences ranging from academia, bio-tech/pharmaceuticals to manufacturing and Six-Sigma, I've gained considerable experience working with disparate systems, the teams that own them, and the differing constraints faced by each.</p>
+                    <p>Recently, I've been researching formal methods of distributed/concurrent system modeling and verification within the .NET technology space.</p>
                 </div>
 
                 <div class="rightCol">
