Added media queries and mobile layout adjustments

--- a/about.html
+++ b/about.html
@@ -2,14 +2,15 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8" />
-        <title>michael yeaney :: about me</title>
+        <meta name="viewport" content="width=device-width, user-scalable=no">
+        <title>michael.yeaney :: about me</title>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="core.css" />
     </head>
     <body>
         <div id="header">
             <div class="wrapper">
-                <h3>{{michael yeaney}}</h3>
+                <h3>{{michael.yeaney}}</h3>
                 <ul>
                     <li><a href="index.html" title="Home">home</a></li>
                     <li><a href="about.html" title="About">about</a></li>
@@ -22,7 +23,7 @@
             <div class="wrapper">
                 <div class="leftCol">
                     <h2>About Me</h2>
-                    <p>As a long-term cloud- and web- based software developer, I've been responsible for projects ranging from mainframe integration to complex, distributed decision-support systems. With experiences ranging from academia, bio-tech/pharmaceuticals to manufacturing and Six-Sigma, I've gained considerable experience working with disparate systems, the teams that own them, and the differing constraints faced by each.</p>
+                    <p>As a long-term cloud- and web- based software developer, I've been responsible for projects ranging from mainframe integration to complex, distributed decision-support systems. Working in environments ranging from academia, bio-tech/pharmaceuticals to manufacturing and Six-Sigma, I have considerable experience working with disparate systems, the teams that own them, and the differing constraints faced by each.</p>
                     <p>Recently, I've been researching formal methods of distributed/concurrent system modeling and verification within the .NET technology space.</p>
                 </div>
 
