--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8" />
-        <title>michael yeaney :: blog</title>
+        <meta name="viewport" content="width=device-width, user-scalable=no">
+        <title>michael.yeaney :: blog</title>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="core.css" />
     </head>
     <body>
         <div id="header">
             <div class="wrapper">
-                <h3>{{michael yeaney}}</h3>
+                <h3>{{michael.yeaney}}</h3>
                 <ul>
                     <li><a href="index.html" title="Home">home</a></li>
                     <li><a href="about.html" title="About">about</a></li>
