--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <div class="wrapper">
                 <h3>{{michael.yeaney}}</h3>
                 <ul>
-                    <li><a href="index.html" title="Home">home</a></li>
-                    <li><a href="about.html" title="About">about</a></li>
+                    <li><a href="/" title="Home">home</a></li>
+                    <li><a href="/about" title="About">about</a></li>
                     <li><a href="rss.xml" title="RSS Feed">rss</a></li>
                 </ul>
             </div>
