--- a/header.html
+++ b/header.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="/" title="Home">home</a></li>
                     <li><a href="/about" title="About">about</a></li>
-                    <li><a href="rss.xml" title="RSS Feed">rss</a></li>
+                    <li><a href="/rss.xml" title="RSS Feed">rss</a></li>
                 </ul>
             </div>
         </div>
