Switch small nav over to bg image

--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@
         <div id="header">
             <div class="wrapper">
                 <h3>{{michael.yeaney}}</h3>
-                <a class="hamburger" title="Menu">&#9776;</a>
+                <a class="hamburger" title="Menu"></a>
                 <ul>
                     <li><a href="/" title="Home">home</a></li>
                     <li><a href="/about" title="About">about</a></li>
