--- a/drafts/2014-06-24-Distributed-systems-are-hard.html
+++ b/drafts/2014-06-24-Distributed-systems-are-hard.html
@@ -4,12 +4,12 @@
 
     <p>Building distributed systems is difficult; likewise for ensuring they behave the way 
     they are supposed to. No matter how "simple" of a system you think you may have, you 
-    cannot escape the physics that govern their behavior. It is all to common to have 
+    cannot escape the physics that govern their behavior. It is all too common to have 
     teams build entire portions of a system, test and deploy them, only to find their 
     behavior under real usage quite different than expected. Often, these errors result 
     from the fact that, by definition, distributed systems are inherently <em>asynchronous</em>, 
     meaning that their behavior is nondeterministic. These nondeterministic effects can 
-    be caused by such things as network partitions (yes, they do happen [APHYR]), message 
+    be caused by such things as network partitions (yes, they do happen), message 
     transmission delays, or even unanticipated interleaving of system events.</p>
 
     <p>Regardless of the cause, all of this nondeterminism contributes significant risk to 
@@ -21,7 +21,7 @@
     does not expose systems to the variability encountered in the real world.</p>
 
     <p>So what can we do in order to mitigate these risks? Distributed applications are not 
-    going to disappear anytime soon, and the increasing need to build and understand complex 
+    going to simply disappear, and the increasing need to build and understand complex 
     systems with confidence means teams cannot continue to take educated guesses when it 
     comes to system stability and correctness.</p>
 
@@ -51,11 +51,10 @@
 
     <p>We can generalize this concept by rewording it to state that distributed 
     systems are made up of one or more "nodes" (typically called "processes"), all connected 
-    by "channels". Nodes represent the individual computers that are part of the system - 
-    the web server, the database (in the simple case), the client, etc. Channels represent 
-    the network connection in between, and are typically modeled as 
-    <em>first-in-first-out</em> (FIFO) queues. Let's redraw our simple system from above 
-    using this new terminology:</p>
+    by a network connections (referred to as "channels"). Nodes represent the individual computers 
+    that are part of the system - the web server, the database, the client, etc. Channels represent 
+    the network connection in between, and are typically modeled as <em>first-in-first-out</em> (FIFO) 
+    queues or buffers. Let's redraw our simple system from above using this new terminology:</p>
 
     <p>-- FIGURE --</p>
 
@@ -76,12 +75,12 @@
 
     <p>Here, we have 2 clients, each using a browser to talk to a single web server, which 
     communicates with the database. Our engineering question is as follows: is the data 
-    stored in the correct order with respect to the users' actions? In other words, if 
+    stored correctly with respect to the users' actions? In other words, if 
     these two users were simultaneously updating shared data, would the system design 
     itself afford any guarantee of data integrity?</p>
 
     <p>Using tools that we'll be looking at (and coding) in upcoming posts, we learn something 
-    pretty startling: the design itself guarantees nothing. In fact, this "simple" little 
+    pretty startling: the design presented so far guarantees nothing. In fact, this "simple" little 
     example gives way to XXX distinct states that would be very difficult (if not impossible) 
     to test manually. Have a look for yourself:</p>
 
