--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
                 <a class="hamburger" title="Menu"></a>
                 <ul>
                     <li><a href="/" title="Home">home</a></li>
-                    <li><a href="/about" title="About">about</a></li>
+                    <li><a href="/about/" title="About">about</a></li>
                 </ul>
             </div>
         </div>
