Added make file to perform initial cleanup

--- a/drafts/2017-01-05-New-Year-Welcome.html
+++ b/drafts/2017-01-05-New-Year-Welcome.html
@@ -9,7 +9,7 @@
         perspectives.</p>
 
     <p>Most notably, 2016 marked my first year at Microsoft. This has already been an incredible journey,
-        and I can only imagine what the future holds. I am incredibly honored to be part of the mobile first, 
+        and I can only imagine what the future holds. I am incredibly proud to be part of the mobile first, 
         cloud first journey that Microsoft is on, and it is truly amazing to see the things that customers are
         doing with our platform. There is an amazing selection of tools and services to leverage, allowing 
         endless opportunity to transform even the most legacy business into a modern powerhouse.</p>
