--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="content">
             <div class="wrapper">
                 <div class="leftCol">
-<div class="post frontPage"><h2><a href="2017/03/29/powershellfun/" title="Read more">PowerShell Fun - Recursive Folder Size</a></h2><p>While playing around with some PowerShell scripts today, I was looking for 
+<div class="post frontPage"><h2><a href="2017/03/29/powershellfun/" title="Read more">PowerShell Fun: Recursive Folder Size</a></h2><p>While playing around with some PowerShell scripts today, I was looking for 
         some fun (??) ways to get a view of how big a folder and all of its&apos; contents are. This is arguably 
         pretty trivial, but we&apos;re just having fun, right? :-)</p><div class="authorInfo">Michael Yeaney <span class="dateText">March 29, 2017</span></div></div>                </div>
 
