Stubbed out next post

--- a/drafts/NetworkDiscoveryWithPowershell.html
+++ b/drafts/NetworkDiscoveryWithPowershell.html
@@ -2,7 +2,7 @@ Among most useful commands we can have at our disposal, those related to network
 for troubleshooting many types of problems.
 
 I'll cover some of the basic utilities here, and give a few examples of how they can be used to 
-understand your environment (in this case, we'll use a VM deployed on Azure).
+understand your environment. In following examples, we'll use a Windows Server 2016 VM deployed on Azure.
 
 Interfaces
 
