--- a/disqus.html
+++ b/disqus.html
@@ -1,4 +1,4 @@
-﻿<div id="disqus_thread"></div>
+<div id="disqus_thread"></div>
 <script>
 (function() {
 var d = document, s = d.createElement('script');
