--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-﻿                </div>
+                </div>
 
                 <div class="rightCol">
                     <div class="mugShot">
