--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="leftCol">
 <div class="post frontPage">
                         <h2><a href="2017/08/18/messagelifetimesfaultyclocks/" title="Read more">Message Lifetimes and Faulty Clocks</a></h2>
-                        <p>Sending messages between two computers is a common task, especially in the context of systems integration, distributed computing and of course, cloud deployed applications. One common requirement that arises is to not process messages that are older than some established threshold. However, this seemingly simple requirement relies on a level of time synchronization that can be more difficult to achieve than it seems.</p>
+                        <p>Sending messages between two computers is a common task, especially in the context of modern cloud applications and Internet-of-Things (IoT) deployments. One common requirement that arises is to not process messages that are older than some established threshold. However, this seemingly simple requirement relies on a level of time synchronization that can be more difficult to achieve than it seems.</p>
                         <div class="authorInfo">Michael Yeaney <span class="dateText">August 18, 2017</span></div>
                     </div><div class="post frontPage">
                         <h2><a href="2017/08/07/cacheconsistency/" title="Read more">Cache Consistency: Avoiding Common Issues</a></h2>
