--- a/header.html
+++ b/header.html
@@ -2,11 +2,13 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8" />
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="mobile-web-app-capable" content="yes">
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <title>${title}Michael Yeaney - Blog</title>
         <link href="//fonts.googleapis.com/css?family=Open+Sans:400,300,600" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" type="text/css" href="/core.css?ver=1.31" />
-        <link rel="icon" type="image/x-icon" href="/favicon.ico?ver=1.31" />
+        <link rel="stylesheet" type="text/css" href="/core.css?ver=1.32" />
+        <link rel="icon" type="image/x-icon" href="/favicon.ico?ver=1.32" />
     </head>
     <body>
         <div id="header">
