Working on new post draft

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             <div class="wrapper">
                 <div class="leftCol">
 <div class="post frontPage">
+                        <h2><a href="2018/06/05/omsvmtags/" title="Read more">Querying Azure VM Tags through Log Analytics</a></h2>
+                        <p>A common issue encountered when working with teams is how to expose Azure Resource Manager tag values in Log Analytics queries?  While this feature isn&#x2019;t quite available yet, I&#x2019;ll show you how to leverage serverless offerings (including Logic Apps and Functions) to pull this data into your queries.  This data can then be used to create tag-driven alerts or augment queries with tag information that may have been previously unavailable.</p>
+                        <div class="authorInfo">Michael Yeaney <span class="dateText">June 5, 2018</span></div>
+                    </div><div class="post frontPage">
                         <h2><a href="2017/08/14/messagelifetimesfaultyclocks/" title="Read more">Message Lifetimes and Faulty Clocks</a></h2>
                         <p>Sending messages between two computers is a common task, especially in the context of modern cloud applications and Internet-of-Things (IoT) deployments. One common requirement that arises is to not process messages that are older than some established threshold. However, this seemingly simple requirement relies on a level of time synchronization that can be more difficult to achieve than it seems.</p>
                         <div class="authorInfo">Michael Yeaney <span class="dateText">August 14, 2017</span></div>
