--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="leftCol">
 <div class="post frontPage">
                         <h2><a href="2018/06/05/omsvmtags/" title="Read more">Query Azure VM Tags from Log Analytics</a></h2>
-                        <p>A common issue I encounter when working with teams is how to expose Azure Resource Manager tag values in Log Analytics queries.  While this feature isn&#x2019;t available natively in Log Analytics at the moment, we can leverage Azure serverless offerings (including Logic Apps and Functions) to pull this data into your Log Analytics workspaces.  This data can then be used to create tag-driven alerts or augment queries with tag information that may have been previously unavailable.</p>
+                        <p>A common issue I encounter when working with customers is how to best expose Azure Resource Manager tag values in Log Analytics queries.  While this feature isn&#x2019;t available natively in Log Analytics at the moment, we can leverage Azure serverless offerings (including Logic Apps and Functions) to pull this data into your Log Analytics workspaces.  This data can then be used to create tag-driven alerts or augment queries with tag information that may have been previously unavailable.</p>
                         <div class="authorInfo">Michael Yeaney <span class="dateText">June 5, 2018</span></div>
                     </div><div class="post frontPage">
                         <h2><a href="2017/08/14/messagelifetimesfaultyclocks/" title="Read more">Message Lifetimes and Faulty Clocks</a></h2>
