--- a/footer.html
+++ b/footer.html
@@ -25,7 +25,7 @@
         </div>
         
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script src="/common.js"></script>
+        <script src="/common.js?ver=1.45"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
         <script>hljs.initHighlightingOnLoad();</script>
         <script>
