Finished concurrency post; will publish after final review

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="leftCol">
 <div class="post frontPage">
                         <h2><a href="2019/01/11/lightweightcoordinationazureappservice/" title="Read more">Lightweight Coordination on Azure AppService</a></h2>
-                        <p>Occasionally while working on customer projects, you encounter conditions that requiring thinking outside the box in order to deliver working solutions.  In this case, I&#x2019;ll share an approach used to ensure serial execution of business logic across multiple instances of Azure AppService  - even when the logic isn&#x2019;t suited to this type of environment. However, what makes this solution unique is that it doesn&#x2019;t rely on any external services to provide this functionality, even between multiple instances of of the application.</p>
+                        <p>In this post I want to share an approach used to ensure serial execution of business logic across multiple instances of Azure AppService  - even when the logic isn&#x2019;t suited to this type of environment. However, what makes this solution unique is that it doesn&#x2019;t rely on any external services to provide this functionality, even between multiple instances of of the application.</p>
                         <div class="authorInfo">Michael Yeaney <span class="dateText">January 11, 2019</span></div>
                     </div><div class="post frontPage">
                         <h2><a href="2018/06/05/omsvmtags/" title="Read more">Query Azure VM Tags from Log Analytics</a></h2>
