--- a/about/index.html
+++ b/about/index.html
@@ -49,21 +49,20 @@
 
         <div id="footer">
             <div class="wrapper">
-                <p>&copy; 2019, Michael J. Yeaney, All Rights Reserved</p>
+                <p>&copy; 2021, Michael J. Yeaney, All Rights Reserved</p>
             </div>
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="/common.js?ver=1.50"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-51915288-1"></script>
         <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
-          ga('create', 'UA-51915288-1', 'mjyeaney.github.io');
-          ga('send', 'pageview');
-
+            gtag('config', 'UA-51915288-1');
         </script>
     </body>
 </html>
